--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,20 +3,12 @@
         <title>Skeny writes barely</title>
     </head>
     <body>
-        <div>
-            <h1><a href="/">This link is useless</a></h1>
-        </div>
-
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">So it this</a></h2>
-            <p>You probably shouldn't be reading this</p>
-        </div>
-
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">What are you still doing here?</a></h2>
-            <p>Get a life dude, seriously!</p>
-        </div>
+       	{% for post in posts %}
+       		<div>
+       			<p>Published: {{post.published_date}}</p>
+       			<h2><a href="">{{post.title}}</a></h2>
+       			<p>{{ post.text | linebreaksbr }}</p>
+       		</div>
+       	{% endfor %}
     </body>
 </html>
