Modified home page

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
 	{% block content %}
 		<h2>Hey Stalker!</h2>
+		<p>I'm Skeny but that's obvious from the blog name. I'm a programmer in progress. I love building stuff but end up getting distracted by unnecessary little things.</p>
 	{% endblock content %}
