--- a/blog/static/blog/blog_modified.css
+++ b/blog/static/blog/blog_modified.css
@@ -1,5 +1,5 @@
 body {
-  background: #fafafa;
+  background: ##b6f4ff ;
   color: #333333;
   margin-top: 5rem;
 }
@@ -7,13 +7,16 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
-
+h2{
+  font-size: 23px;
+  font-weight: bold;
+}
 ul {
   margin: 0;
 }
 
 .bg-steel {
-  background-color: #000000;
+  background-color: #081421;
 }
 
 .site-header .navbar-nav .nav-link {
@@ -21,7 +24,7 @@ ul {
 }
 
 .site-header .navbar-nav .nav-link:hover {
-  color: #ffffff;
+  color:  #cacfd2;
 }
 
 .site-header .navbar-nav .nav-link.active {
@@ -29,7 +32,7 @@ ul {
 }
 
 .content-section {
-  background: #ffffff;
+  background:  #ffffff;
   padding: 10px 20px;
   border: 1px solid #dddddd;
   border-radius: 3px;
