--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,7 +11,6 @@
 
         <title>Skeny's blog</title>
 
-        <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">-->
         <link href="https://fonts.googleapis.com/css?family=EB+Garamond" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'blog/blog_modified.css' %}">
     </head>
@@ -23,30 +22,18 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-        <!--<div class="collapse navbar-collapse" id="navbarToggle"> -->
-       <!-- <div class="navbar-nav">
-          <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
-          <a class="nav-item nav-link" href="{% url 'blog-about'  %}">About</a>
-        </div> -->
-        <!-- Navbar Right Side-->
         <div class="navbar-nav">
-         <!-- <a class="nav-item nav-link" href="#">Login</a>
-          <a class="nav-item nav-link" href="#">Register</a> -->
           <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
           <a class="nav-item nav-link" href="{% url 'blog-about'  %}">About</a>
           {% if user.is_authenticated%}
             <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
             <a class="nav-item nav-link" href="{% url 'logout' %}">Get me outta here</a>
-            <!--<a class="nav-item nav-link" href="{% url 'login' %}">Login</a> -->
           {% endif %}
         </div>
         </div>
         </div>
         </nav>
         </header>
-        <!--<div class="page-header">
-            <h1><a href="/">Skeny writes barely</a></h1>
-        </div> -->
         <main role="main" class="container">
             <div class="row">
             <div class="col-md-8">
@@ -56,24 +43,10 @@
                     {{ message }}
                   </div>
                 {% endfor %}
-                {% endif %}
-              {% block content %}{% endblock content %}
-              
+              {% endif %}
+              {% block content %}
+              {% endblock content %}
             </div>
-           <!-- <div class="col-md-4">
-              <div class="content-section">
-                <h3>Our Sidebar</h3>
-                <p class='text-muted'>You can put any information here you'd like.
-                  <ul class="list-group">
-                    <li class="list-group-item list-group-item-light">Latest Posts</li>
-                    <li class="list-group-item list-group-item-light">Announcements</li>
-                    <li class="list-group-item list-group-item-light">Calendars</li>
-                    <li class="list-group-item list-group-item-light">etc</li>
-                  </ul>
-                </p>
-              </div>
-            </div>
-          -->
           </div>
         </main>
 
