--- a/blog/static/blog/blog_modified.css
+++ b/blog/static/blog/blog_modified.css
@@ -50,6 +50,8 @@ a.article-title:hover {
 
 .article-content {
   white-space: pre-line;
+  box-sizing: border-box;
+  float: left;
 }
 
 .article-img {
