--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -7,8 +7,8 @@
 		      <a class="mr-2">{{ post.author }}</a>
 		      <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
 		    </div>
-		    <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-		    <p class="article-content">{{ post.blog_data }}</p>
+		    <h2><a class="article-title" href="{% url 'post-detail' slug=post.slug %}">{{ post.title }}</a></h2>
+		    <p class="article-content">{{ post.snippet }}</p>
 		  </div>
 		</article>
 	{% endfor %}
